# agentfuse-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml  demo.yml  release.yml
assets/: README.md  demo.tape
docs/: demo.tape
examples/: runaway_agent.py
src/agentfuse/: __init__.py  budget.py  cli.py  exceptions.py  fuse.py  pricing.py  store.py  stream.py  wrap.py
tests/: test_budget.py  test_fuse.py  test_pricing_policy.py  test_store.py  test_stream.py
